# cyber-pilot

./: .coveragerc  .cypilot-config.json  .fdd-config.json  .gitignore  ADAPTER_GUIDE.md  AGENTS.md  CLISPEC.md  COMPARISON_FDD_OPENSPEC_SPECKIT_MCAF.md  CONTRIBUTING.md  Makefile  QUICKSTART.md  README-2.md  README.md  SDD_COMPARISON.md  WORKFLOW.md  pyproject.toml  sonar-project.properties  vulture_whitelist.py
.adapter/: AGENTS.md  artifacts.json
.cypilot/: CLISPEC.md
.cypilot-adapter/: AGENTS.md  artifacts.json  artifacts.toml
.spider-adapter/: AGENTS.md  artifacts.json
architecture/: BUSINESS.md  DECOMPOSITION.md  DESIGN.md  MARKET-RESEARCH.md  PRD.md
examples/: BUSINESS.md  CHANGES.md  DESIGN.md  feature-DESIGN.md
guides/: ADAPTER.md  AGENT-TOOLS.md  BROWNFIELD.md  CONFIGURATION.md  GREENFIELD.md  MIGRATION.md  MONOLITH.md  PROJECT-EXTENSIBILITY.md  STORY.md  TAXONOMY.md  USAGE-GUIDE.md
requirements/: CDSL.md  FDL.md  README.md  SDSL.md  adapter-structure.md  adapter-triggers.md  adr-structure.md  agent-compliance.md  artifacts-registry.md  auto-config.md  business-context-structure.md  core-agents.md  core.md  execution-protocol.md  extension.md  feature-changes-structure.md  feature-design-structure.md  features-manifest-structure.md  kit-constraints.md  openspec-change-structure.md  overall-design-structure.md  prd-structure.md  prompt-bug-finding.md  prompt-engineering.md  raw-input-overflow.md  readme-checklist.md  requirements.md  reverse-engineering.md  rules-format.md  template.md  traceability.md  workflow-execution-operations.md  workspace.md  (+3 more)
(+704 files in other folders)
