[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "cypilot"
version = "3.0.0a1"
description = "Cypilot global CLI proxy — deterministic agent tool for structured workflows"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
# @cpt-dod:cpt-cypilot-dod-core-infra-global-package:p1 — zero third-party dependencies
dependencies = []

[project.scripts]
# @cpt-dod:cpt-cypilot-dod-core-infra-global-package:p1 — console entry points
cypilot = "cypilot_proxy.cli:main"
cpt = "cypilot_proxy.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
